Top bar hides everything when there isn't enough space to draw it's contents #59445

Closed
opened 2018-12-16 06:56:09 +01:00 by Jerome · 16 comments

System Information
Operating system: Windows 10, intel core i7
Graphics card: GeForceGTX 1060

Blender Version
Broken: 2.80, Hash 4488056f3d, date: 2018-12-16 00:27
Worked: (optional)

Short description of error
When working with a grease pencil object in the draw mode, the tools in the top bar disappear when the application window is reduced in width. I noticed this when I reduced the width of the application window to 1280 pixels for recording the window in a standard 720x1280 format. It appears that when there is not enough room horizontally, the tools in the top bar disappear rather than allow for scrolling, as when working in other workspaces.

Exact steps for others to reproduce the error
Open a new file with the 2D animation workspace preset, or add a grease pencil object in the default workspace. Select the draw mode inside the grease pencil object, select the fill tool option, then reduce the application window horizontally. The tools in the top bar disappear when the window is narrower than the width required to display them fully. And neither scrolling nor clicking the plus sign at the left seem to have any effect to bring them back.

**System Information** Operating system: Windows 10, intel core i7 Graphics card: GeForceGTX 1060 **Blender Version** Broken: 2.80, Hash 4488056f3d9, date: 2018-12-16 00:27 Worked: (optional) **Short description of error** When working with a grease pencil object in the draw mode, the tools in the top bar disappear when the application window is reduced in width. I noticed this when I reduced the width of the application window to 1280 pixels for recording the window in a standard 720x1280 format. It appears that when there is not enough room horizontally, the tools in the top bar disappear rather than allow for scrolling, as when working in other workspaces. **Exact steps for others to reproduce the error** Open a new file with the 2D animation workspace preset, or add a grease pencil object in the default workspace. Select the draw mode inside the grease pencil object, select the fill tool option, then reduce the application window horizontally. The tools in the top bar disappear when the window is narrower than the width required to display them fully. And neither scrolling nor clicking the plus sign at the left seem to have any effect to bring them back.
Author

Added subscriber: @BlenderPretender

Added subscriber: @BlenderPretender

#62339 was marked as duplicate of this issue

#62339 was marked as duplicate of this issue

#62308 was marked as duplicate of this issue

#62308 was marked as duplicate of this issue

#62276 was marked as duplicate of this issue

#62276 was marked as duplicate of this issue

#61972 was marked as duplicate of this issue

#61972 was marked as duplicate of this issue

#61794 was marked as duplicate of this issue

#61794 was marked as duplicate of this issue

Added subscribers: @ideasman42, @antoniov

Added subscribers: @ideasman42, @antoniov

@ideasman42 What we can do here?

@ideasman42 What we can do here?

@antoniov this has been a bug in the topbar / layout engine for a long time, it needs to be fixed - it's not grease pencil related.

@antoniov this has been a bug in the topbar / layout engine for a long time, it needs to be fixed - it's not grease pencil related.
Campbell Barton changed title from Grease Pencil Top Bar Draw Tools Disappear to Top bar hides everything when there isn't enough space to draw it's contents 2018-12-17 06:34:37 +01:00

Added subscriber: @JulienDuroure

Added subscriber: @JulienDuroure

Added subscribers: @(Deleted), @ZedDB

Added subscribers: @(Deleted), @ZedDB

Added subscriber: @Dedouze

Added subscriber: @Dedouze

Added subscriber: @SachaGoedegebure

Added subscriber: @SachaGoedegebure

Added subscriber: @caricaturize-4

Added subscriber: @caricaturize-4

This issue was referenced by bbc3ee09e4

This issue was referenced by bbc3ee09e44bfaba1ca2d4ab6a6bf2a51976cdae

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59445
No description provided.