Fix T59445: top bar hides everything when there isn't enough space.

Left and right aligned regions get hidden when there is not enough space,
and the main center region was empty. Now remove the left region and put
its contents in the center region, so that it always remains.